# pytest-keep-together

./: .flake8  .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml  requirements_dev.txt
src/pytest_keep_together/: __init__.py  pytest_plugin.py
